-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u144
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8191194 | 8u192 | Dipak Kumar | P3 | Resolved | Fixed | b01 |
| JDK-8196348 | 8u172 | Dipak Kumar | P3 | Resolved | Fixed | b04 |
| JDK-8200059 | 8u162 | Kevin Rushforth | P3 | Closed | Fixed | b37 |
- backported by
-
JDK-8191194 Java Fx-Swing dialogs appearing behind main stage
-
- Resolved
-
-
JDK-8196348 Java Fx-Swing dialogs appearing behind main stage
-
- Resolved
-
-
JDK-8200059 Java Fx-Swing dialogs appearing behind main stage
-
- Closed
-
- blocks
-
JDK-8187803 JDK part of JavaFX-Swing dialogs appearing behind main stage
-
- Resolved
-
- relates to
-
JDK-8088395 Print dialogs are not blocking/modal w.r.t specified owner windows
-
- Resolved
-
-
JDK-8191269 Intermittent unit test failure in SwingNodeJDialogTest
-
- Resolved
-
-
JDK-8340849 [macos] Crash when creating a child window of a JavaFX window after Platform::exit
-
- Resolved
-
-
JDK-8190329 [macos] Swing InterOp Platform.exit() crash
-
- Resolved
-
-
JDK-8340849 [macos] Crash when creating a child window of a JavaFX window after Platform::exit
-
- Resolved
-