8185634: Java Fx-Swing dialogs appearing behind main stage Reviewed-by: kcr, serb, ssadetsky