modules/swing/src/main/java/javafx/embed/swing/SwingNode.java
@@ -29,6 +29,7 @@ import javafx.beans.InvalidationListener;
 import javafx.beans.Observable;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
+import javafx.event.Event;
 import javafx.event.EventHandler;
 import javafx.event.EventType;
 import javafx.geometry.Point2D;
@@ -81,11 +82,14 @@ import com.sun.javafx.sg.prism.NGNode;
 import com.sun.javafx.stage.FocusUngrabEvent;
 import com.sun.javafx.stage.ScreenHelper;
 import com.sun.javafx.stage.WindowHelper;
+import com.sun.javafx.tk.TKStage;
 import com.sun.javafx.PlatformUtil;
 import sun.awt.UngrabEvent;
 import sun.awt.LightweightFrame;
 import sun.swing.JLightweightFrame;
 import sun.swing.LightweightContent;
+
+import static javafx.stage.WindowEvent.WINDOW_HIDDEN;
 
 /**
  * This class is used to embed a Swing content into a JavaFX application.
@@ -129,6 +133,17 @@ import sun.swing.LightweightContent;
  * @since JavaFX 8.0
  */
 public class SwingNode extends Node {
+    private static boolean isThreadMerged;
+
+    static {
+        AccessController.doPrivileged(new PrivilegedAction<Object>() {
+            public Object run() {
+                isThreadMerged = Boolean.valueOf(
+                        System.getProperty("javafx.embed.singleThread"));
+                return null;
+            }
+        });
+    }
 
     private double fxWidth;
     private double fxHeight;
@@ -168,6 +183,52 @@ public class SwingNode extends Node {
 
         //Workaround for RT-34170
         javafx.scene.text.Font.getFamilies();
+    }
+
+    private EventHandler windowHiddenHandler = (Event event) -> {
+        if (lwFrame != null &&  event.getTarget() instanceof Window) {
+            final Window w = (Window) event.getTarget();
+            TKStage tk = w.impl_getPeer();
+            if (tk != null) {
+                if (isThreadMerged) {
+                    jlfOverrideNativeWindowHandle.invoke(lwFrame, 0L, null);
+                } else {
+                    // Postpone actual window closing to ensure that
+                    // a native window handler is valid on a Swing side
+                    tk.postponeClose();
+                    SwingFXUtils.runOnEDT(() -> {
+                        jlfOverrideNativeWindowHandle.invoke(lwFrame, 0L,
+                                (Runnable) () -> SwingFXUtils.runOnFxThread(
+                                        () -> tk.closePostponed()));
+                    });
+                }
+            }
+        }
+
+    };
+
+    private Window hWindow = null;
+    private void notifyNativeHandle(Window window) {
+        if (hWindow != window) {
+            if (hWindow != null) {
+                hWindow.removeEventHandler(WINDOW_HIDDEN, windowHiddenHandler);
+            }
+            if (window != null) {
+                window.addEventHandler(WINDOW_HIDDEN, windowHiddenHandler);
+            }
+            hWindow = window;
+        }
+
+        if (lwFrame != null) {
+            long rawHandle = 0L;
+            if (window != null) {
+                TKStage tkStage = window.impl_getPeer();
+                if (tkStage != null) {
+                    rawHandle = tkStage.getRawHandle();
+                }
+            }
+            jlfOverrideNativeWindowHandle.invoke(lwFrame, rawHandle, null);
+        }
     }
 
     /**
@@ -245,6 +306,12 @@ public class SwingNode extends Node {
      */
     private static final OptionalMethod<JLightweightFrame> jlfNotifyDisplayChanged =
         new OptionalMethod<>(JLightweightFrame.class, "notifyDisplayChanged", Integer.TYPE);
+    private static OptionalMethod<JLightweightFrame> jlfOverrideNativeWindowHandle;
+
+    static {
+        jlfOverrideNativeWindowHandle = new OptionalMethod<>(JLightweightFrame.class,
+                        "overrideNativeWindowHandle", Long.TYPE, Runnable.class);
+    }
 
     /*
      * Called on EDT
@@ -264,6 +331,10 @@ public class SwingNode extends Node {
             jlfNotifyDisplayChanged.invoke(lwFrame, scale);
             lwFrame.setContent(new SwingNodeContent(content, this));
             lwFrame.setVisible(true);
+
+            if (getScene() != null) {
+                notifyNativeHandle(getScene().getWindow());
+            }
 
             SwingNodeDisposer disposeRec = new SwingNodeDisposer(lwFrame);
             Disposer.addRecord(this, disposeRec);
@@ -472,6 +543,9 @@ public class SwingNode extends Node {
         if (oldValue != null) {
             removeWindowListeners(oldValue);
         }
+
+        notifyNativeHandle(newValue);
+
         if (newValue != null) {
             addWindowListeners(newValue);
         }
@@ -489,6 +563,7 @@ public class SwingNode extends Node {
         Window window = scene.getWindow();
         if (window != null) {
             addWindowListeners(window);
+            notifyNativeHandle(window);
         }
         scene.windowProperty().addListener(sceneWindowListener);
     }
